# sessionguard

./: .env.example  .gitignore  FINAL_AUDIT_2026-05-23.md  README.md  SESSIONGUARDREVIVAL1.2.md  SESSIONGUARDREVIVAL1.3.md  SESSIONGUARDREVIVAL1.4.md  START_SESSIONGUARD.bat  SessionGuardRevival.md  build_installer.bat  build_installer.sh  init_db.py  pytest.ini  requirements.txt  run_backend.bat  start_backend.bat
.github/workflows/: build.yml  test.yml
audits/: 2026-07-23_Codex_Codebase_Audit.md  2026-07-23_Hermes_GovernanceBootstrap_Audit.md
backend/: main.py
config/: app_config.json
database/: db.py  encryption.py
desktop_shell/: package-lock.json  package.json  stage-backend.js
desktop_shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop_shell/src-tauri/src/: main.rs
docs/: _baseline.json
engines/: ai_insights_engine.py  alert_presets.py  alerts_engine.py  analysis_engine.py  behavior_engine.py  cluster_engine.py  comparison_engine.py  csv_import_engine.py  dataset_quality.py  event_validator.py  frame_annotator.py  insights_engine.py  live_coach_engine.py  live_engine.py  ocr_engine.py  offline_ai.py  parser_benchmark.py  prompt_manager.py  review_queue_engine.py  roi_calibrator.py  session_fingerprint.py  trend_engine.py  video_pipeline.py
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: PySide6  calibrate_ocr.py  create_release.bat  run_all.bat  run_all.sh  run_backend.bat  run_backend.sh  run_desktop.bat  run_desktop.sh  run_frontend.bat  run_frontend.sh  seed_db.bat  seed_db.sh  setup.bat  setup.sh  verify.ps1  verify.sh
tests/: __init__.py  conftest.py  test_ai_cost.py  test_ai_schemas.py  test_alerts_engine.py  test_analysis_engine.py  test_async_db.py  test_auth.py  test_behavior_engine.py  test_cluster_engine.py  test_comparison_engine.py  test_encryption.py  test_event_validator.py  test_frame_annotator.py  test_insights_engine.py  test_jobs.py  test_ocr_benchmark.py  test_offline_ai.py  test_review_queue_engine.py  test_trend_engine.py  test_upload.py
(+108 files in other folders)
