[package]
name    = "sessionguard"
version = "1.0.0"
edition = "2021"
default-run = "sessionguard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "http-all",
  "shell-open",
  "window-all",
  "notification-all",
  "system-tray",
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.11", features = ["blocking"] }
opener      = "0.5"

[features]
# By default Tauri runs in production mode.
# `tauri dev` sets this to development.
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]
