[package]
name = "sessionguard"
version = "1.0.0"
edition = "2021"

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "http-all", "notification-all",
  "system-tray",
  "shell-open",
  "window-all",
  "dialog-all",
  "global-shortcut-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }
